Update jsonwebtoken middleware

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=3000
 
 DATABASE_HOST=mongodb+srv://imdymendes:iTML35oZHGnQ4hzH@cluster0.dzmcozj.mongodb.net/
+
+JWT_SECRET=JOG9iwOmgenkX3RwSlhW&uYSb
