--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ PORT=3000
 
 DATABASE_HOST=mongodb+srv://imdymendes:iTML35oZHGnQ4hzH@cluster0.dzmcozj.mongodb.net/
 
-JWT_SECRET=JOG9iwOmgenkX3RwSlhW&uYSb
+JWT_SECRET=JOG9iwOmgenkX3RwSlhW&uYSbcls
