--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "mercadopago": "^2.0.9",
     "mongoose": "^8.3.1",
-    "npm": "^10.5.2"
+    "npm": "^10.5.2",
+    "uuid": "^9.0.1"
   }
 }
